--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -231,8 +231,8 @@ input[type="file"] {
   transition: all ease 0.4s;
 
   &:hover {
-    background-color: var(--green);
-    color: var(--black);
+    background-color: var(--purple);
+    color: var(--white);
 
     svg {
       path {
