--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -22,7 +22,7 @@
                 position: absolute;
                 width: 12px;
                 height: 12px;
-                background-color: var(--white);
+                background-color: var(--custom-orange);
                 transform: translateX(-50%) rotate(45deg);
                 left: 50%;
                 top: -5px;
@@ -58,8 +58,8 @@
     transition: all ease 0.5s;
 
     &.fixed {
-        background-color: var(--white);
-        box-shadow: 0px 10px 25px 0px rgba(43, 52, 74, 0.12);
+        background-color: var(--custom-orange);
+        box-shadow: 0px 10px 25px 0px rgba(69, 90, 144, 0.12);
         top: 0;
         animation: animateHeader ease 0.5s;
 
@@ -233,7 +233,7 @@
     left: 0;
     height: 100vh;
     width: 0;
-    background-color: var(--white);
+    background-color: var(--custom-orange);
     z-index: 102;
     transition: all ease 0.5s;
 
@@ -303,7 +303,7 @@
                         top: 0;
                         left: 100%;
                         width: 100%;
-                        background-color: var(--white);
+                        background-color: var(--custom-orange);
                         transition: all ease 0.3s;
                         z-index: 10;
 
@@ -379,7 +379,7 @@
 }
 
 .style-marketplace.sub-menu-department {
-    background-color: var(--white) !important;
+    background-color: var(--purple) !important;
     height: 460px !important;
     border-color: transparent;
 
