image ,content,font changed

--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -33,7 +33,7 @@
 .list-tags {
     .tags {
         &.active {
-            background-color: var(--black);
+            background-color: var(--purple);
             color: var(--white);
         }
     }
