--- a/src/styles/custom-swiper.scss
+++ b/src/styles/custom-swiper.scss
@@ -31,7 +31,7 @@
     position: relative;
     margin: 0 8px !important;
     background: transparent;
-    border: 1px solid var(--black);
+    border: 1px solid var(--purple);
     opacity: 1 !important;
     transition: all ease 0.5s;
 }
