--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -223,7 +223,7 @@ input[type="file"] {
   font-weight: 600;
   text-transform: uppercase;
   color: var(--white);
-  background-color: var(--black);
+  background-color: var(--#9e5eff);
   padding: 16px 40px;
   border-radius: 12px;
   display: inline-block;
