--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -682,7 +682,7 @@
 .style-marketplace {
     .button-main {
         &:hover {
-            background-color: var(--green);
+            background-color:rgb(58, 22, 126);
             color: var(--black);
         }
     }
