--- a/src/styles/layout/category-active.scss
+++ b/src/styles/layout/category-active.scss
@@ -31,7 +31,7 @@
         .tab-item {
             &.active {
                 color: var(--white);
-                background-color: var(--black);
+                background-color: '#9e5eff'; // color change 
                 box-shadow: 0px 2px 2px 0px rgba(28, 36, 51, 0.10);
             }
         }
@@ -43,7 +43,7 @@
         .menu-tab {
             .tab-item {
                 &.active {
-                    background-color: var(--black);
+                    background-color:rgba(128, 128, 128, 0.219);
                     color: var(--white);
                 }
             }
