landing page done

--- a/src/styles/custom-swiper.scss
+++ b/src/styles/custom-swiper.scss
@@ -92,7 +92,7 @@
 /* Swiper Navigation */
 .section-swiper-navigation .swiper-button-prev,
 .section-swiper-navigation .swiper-button-next {
-    color: var(--black);
+    color: var(--purple);
     background-color: var(--white);
     width: 60px;
     height: 60px;
@@ -112,7 +112,7 @@
 
 .section-swiper-navigation .swiper-button-prev:hover,
 .section-swiper-navigation .swiper-button-next:hover {
-    background-color: var(--black);
+    background-color: var(--purple);
     color: var(--white);
 }
 
