--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -9,7 +9,7 @@
                 position: absolute;
                 left: 0;
                 height: 4px;
-                background-color: #3DAB25;
+                background-color: #a394ea;
 
                 &::before {
                     content: "";
@@ -19,7 +19,7 @@
                     width: 16px;
                     height: 16px;
                     border-radius: 50%;
-                    background-color: #3DAB25;
+                    background-color: #a394ea;
                 }
             }
         }
