--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -94,7 +94,7 @@
                 left: 0;
                 width: 0;
                 height: 1px;
-                background-color: var(--black);
+                background-color: var(--white);
                 transition: all ease 0.3s;
             }
 
