--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,7 +7,7 @@
   --white: #ffffff;
   --surface: #F7F7F7;
   --red: #DB4444;
-  --purple: #8684D4;
+  --purple: #7449d0;
   --success: #3DAB25;
   --yellow: #ECB018;
   --pink: #F4407D;
