--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -242,7 +242,7 @@ input[type="file"] {
 
   &.bg-white {
     &:hover {
-      background-color: var(--black);
+      background-color: var(--purple);
       color: var(--white);
     }
   }
