--- a/src/styles/layout/featured-product.scss
+++ b/src/styles/layout/featured-product.scss
@@ -90,7 +90,7 @@
 
                 &.swiper-slide-thumb-active {
                     opacity: 1;
-                    border-color: var(--black);
+                    border-color: var(--white);
                 }
 
                 @media (max-width: 1024px) {
