--- a/src/styles/layout/category-active.scss
+++ b/src/styles/layout/category-active.scss
@@ -5,7 +5,7 @@
         cursor: pointer;
 
         &.active {
-            color: var(--black);
+            color: var(--purple);
             background-color: var(--white);
             box-shadow: 0px 2px 2px 0px rgba(28, 36, 51, 0.10);
         }
@@ -32,7 +32,7 @@
             &.active {
                 color: var(--white);
                 background-color: '#9e5eff'; // color change 
-                box-shadow: 0px 2px 2px 0px rgba(28, 36, 51, 0.10);
+                box-shadow: 0px 2px 2px 0px rgba(173, 252, 245, 0.1);
             }
         }
     }
@@ -43,7 +43,7 @@
         .menu-tab {
             .tab-item {
                 &.active {
-                    background-color:rgba(128, 128, 128, 0.219);
+                    background-color:rgba(95, 193, 246, 0.219);
                     color: var(--white);
                 }
             }
