--- a/src/styles/layout/collection.scss
+++ b/src/styles/layout/collection.scss
@@ -15,7 +15,7 @@
         transform: translate(-50%);
 
         &:hover {
-            background-color: var(--black);
+            background-color: var(--purple);
             color: var(--white);
         }
     }
