--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -380,3 +380,34 @@ input[type="file"] {
     border-radius: 8px;
   }
 }
+.toolbar_pillbar__SSKzY .toolbar_toolbarContainer__BtQnv {
+	width: 100%;
+	height: 100%;
+	display: none !important ;
+}
+
+.toolbar_pillbar__SSKzY.toolbar_column__NtnSe {
+	--direction: column;
+	--row-toolbar: 0;
+	--column-toolbar: 1;
+	display: none !important ;
+}
+
+.toasts_toastContainer__HBhip {
+	width: 420px;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	box-shadow: var(--ds-shadow-menu);
+	border-radius: 12px;
+	background: var(--geist-background);
+	color: var(--ds-gray-1000);
+	line-height: 21px;
+	padding: 16px;
+	opacity: 0;
+	transform: translate3d(0, 100%, 150px) scale(1);
+	transition: all 0.35s cubic-bezier(0.25, 0.75, 0.6, 0.98);
+	z-index: 5000;
+	max-width: min(420px, calc(100vw - 2 * var(--geist-gap)));
+	display: none !important;
+}
