--- a/src/styles/layout/text-has-line-before.scss
+++ b/src/styles/layout/text-has-line-before.scss
@@ -22,7 +22,7 @@
     &:hover {
         &::before {
             width: 100%;
-            background-color: var(--purple);
+            background-color: var(--black);
         }
     }
 
