--- a/src/styles/shop.scss
+++ b/src/styles/shop.scss
@@ -219,7 +219,7 @@
 
             &:hover,
             &.active {
-                background-color: var(--black);
+                background-color: var(--purple);
                 color: var(--white);
             }
 
