--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -36,7 +36,7 @@
 
                 &:hover {
                     background: rgba($color: #000000, $alpha: 0.6);
-                    color: var(--white);
+                    color: var(--purple);
                 }
             }
 
@@ -99,7 +99,7 @@
             }
 
             &.active {
-                color: var(--white);
+                color: var(--purple);
             }
 
             &.view-all-btn::before {
