--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -35,8 +35,8 @@
                 transition: 0.3s;
 
                 &:hover {
-                    background: rgba($color: #000000, $alpha: 0.6);
-                    color: var(--purple);
+                    background: rgba($color: rgb(97, 25, 222), $alpha: 0.6);
+                    color: var(--white);
                 }
             }
 
