--- a/src/styles/shop.scss
+++ b/src/styles/shop.scss
@@ -124,7 +124,7 @@
         &:hover {
 
             .text-secondary,
-            .text-secondary2 {
+            .text-purple2 {
                 transition: all ease 0.3s;
                 color: var(--purple);
             }
